# FdF

./: .gitignore  CMakeLists.txt  Makefile  fdf
includes/: fdf.h  ft_mlx_image.h
libft/: Makefile  ft_abs.c  ft_atoi_hex.c
libft/includes/: libft.h
src/: additional_functions.c  draw_gradient_line.c  draw_line.c  fdf_change_alpha_in_argb.c  fdf_draw_map.c  fdf_get_argb.c  fdf_get_result_map.c  fdf_init_map_matrix.c  fdf_map_point_colors.c  fdf_read_map.c  fdf_rotate.c  gradient.txt  hooks.c  hooks2.c  init_img_struct.c  init_mlx_and_img.c  main.c  put_pixel_to_img.c  swap_points.c
src/graphics/: additional_functions.c  draw_gradient_line.c  draw_line.c  init_img_struct.c  init_mlx_and_img.c  put_pixel_to_img.c  rgb_get_gvalue.c
src/rgb/: rgb_get_bvalue.c  rgb_get_color.c  rgb_get_rvalue.c
test_maps/: elem.fdf  pyramide.fdf
trash_maybe/: draw_line.c  get_fraction.c
